Added about section

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                 <span class="subtitle">Hello! I am</span>
                 <h4 class="name">Amogh Desai</h4>
                 <p class="text">
-                  A passionate UI/UX Designer and Web Developer based In NYC,
-                  USA
+                  An Open-Source Enthusiast Leveraging the Power of Data Science to Create Real-Word Impact
                 </p>
               </div>
               <div class="right">
@@ -191,21 +190,15 @@
             <div class="right">
               <div class="know_tm_main_title">
                 <span>About Me</span>
-                <h3>World leading UI/UX designer</h3>
-              </div>
-              <div class="bigger_text">
-                <p>
-                  A passionate UI/UX Designer and Web Developer based In NYC,
-                  USA
-                </p>
+                <h3>Passionate Data Scientist based in Mumbai, India</h3>
               </div>
               <div class="text">
-                <p>
-                  Hi! My name is Jessica Parker. I am UI/UX designer, and I'm
-                  very passionate and dedicated to my work. With 20 years
-                  experience as a professional graphic designer, I have
-                  acquired the skills and knowledge necessary to make your
-                  project a success.
+                <br><p>
+                  <ul style="list-style-type: none;">
+                    <li> 🎓 Senior-year undergrad at Mumbai University </li>
+                    <li> 🧪 Applying Data Science and Machine Learning to diverse domains like Astrophysics, Social Science, Agriculture, Education, Medical Science, and Information Management</li>
+                    <li> 🏆 Honored as one of the Top 87 Engineers in India by Economic Times</li>
+                    <li> 🎯 Identify and solve complex business, operational problems to improve processes</li>
                 </p>
               </div>
             </div>
