Removed extra spaces ++ minor adjustments

--- a/index.html
+++ b/index.html
@@ -96,19 +96,20 @@
           <div class="content_inner">
             <div class="main_info">
               <div class="left">
+                <br><br><br><br>
                 <span class="subtitle">Hello! I am</span>
                 <h4 class="name">Amogh Desai</h4>
                 <p class="text">
                   An Open-Source Enthusiast Leveraging the Power of Data Science to Create Real-Word Impact
                 </p>
               </div>
-              <div class="right">
+              <div class="right" style="padding-top: 50px;">
                 <div class="image">
                   <img src="img/thumbs/47-60.jpg" alt="" />
                   <div class="main" data-img-url="img/hero/2.jpg"></div>
                 </div>
-                <div style="padding:10px 0px 0px 40px;margin-bottom:-20%">
-                  <img src="img/svg/ET.svg" alt="">
+                <div style="margin-top:-15%">
+                  <img src="img/svg/ET.svg" width="400px" height="200px">
 
                 </div>
 
@@ -414,6 +415,7 @@
             </div>
 
             <div class="skills_list">
+              <br><br><br><br><br><br><br><br><br><br><br><br><br>
               <div class="know_tm_resume_title">
                 <h3>Technical Skills</h3>
                 <span class="shape"></span>
@@ -739,10 +741,9 @@
                     href="https://medium.com/@andsbmp17/gsoc-journey-prologue-i-have-a-dream-gsoc2020-c8a7bf0f529d"></a>
                 </div>
                 <div class="details">
-                  <span class="category"><a href="#">Open Source</a></span>
+                  <span class="category"><a href="#">GSOC Journey</a></span>
                   <h3 class="title">
-                    <a href="https://medium.com/@andsbmp17/gsoc-journey-prologue-i-have-a-dream-gsoc2020-c8a7bf0f529d">gsoc_journey
-                      = {“Prologue”: [“I have a Dream!!”, “GSoC’2020”]}</a>
+                    <a href="https://medium.com/@andsbmp17/gsoc-journey-prologue-i-have-a-dream-gsoc2020-c8a7bf0f529d"> Prologue: I have a Dream!</a>
                   </h3>
                 </div>
               </div>
@@ -757,11 +758,10 @@
                     href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-1-community-bonding-phase-stingray-f3f95dffe246"></a>
                 </div>
                 <div class="details">
-                  <span class="category"><a href="#">Open Source</a></span>
+                  <span class="category"><a href="#">GSOC Journey</a></span>
                   <h3 class="title">
                     <a
-                      href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-1-community-bonding-phase-stingray-f3f95dffe246">gsoc_journey.update({“Chapter
-                      1”: [“Community Bonding Phase”, “Stingray”]})</a>
+                      href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-1-community-bonding-phase-stingray-f3f95dffe246">Chapter 1: Stingray and the Community Bonding Phase</a>
                   </h3>
                 </div>
               </div>
@@ -775,11 +775,10 @@
                     href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-2-first-evaluations-google-foobar-d4a51e01685d"></a>
                 </div>
                 <div class="details">
-                  <span class="category"><a href="#">Open Source</a></span>
+                  <span class="category"><a href="#">GSOC Journey</a></span>
                   <h3 class="title">
                     <a
-                      href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-2-first-evaluations-google-foobar-d4a51e01685d">gsoc_journey.update({“Chapter
-                      2”: [“First Evaluations”, “Google Foobar?”]})</a>
+                      href="https://medium.com/@andsbmp17/gsoc-journey-update-chapter-2-first-evaluations-google-foobar-d4a51e01685d">Chapter 2: First Evaluations</a>
                   </h3>
                 </div>
               </div>
